--- a/_posts/2024-05-20-welcome.md
+++ b/_posts/2024-05-20-welcome.md
@@ -1,19 +1,27 @@
 ---
 layout: post
-title:  "About Myself"
+title:  "Welcome to my blog"
 author: "Rajesh Krishnan"
 categories: [about]
 tags: [about]
 ---
 
-Welcome to my personal website and blog. My name is Rajesh Krishnan. I am a retired computer scientist who lives in Fort Valley, Virginia, USA.
+## About Myself
 
-## Publications and Patents
+My name is Rajesh Krishnan. I am a naturalized US citizen of Bharatiya (Indian) origin, and I currently live in Fort Valley, Virginia, USA. 
+
+I am a retired computer scientist by preofession, and I am a senior member of the Association of Computing Machinery.
+
+My current interests include computation, minimalism, veganism, and sanatana dharma (especially yoga and vedanta).
+
+## Earlier Works
+
+### Publications and Patents
 
 For a list of my patents, publications, and reports, see:
 [Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate)
 
-## Open-source Software
+### Open-source Software
 
 Own projects:
 
@@ -28,7 +36,7 @@ Contributions to other projects:
  * [gaps-closure](https://gaps-closure.github.io): Annotation-Driven Program Analysis and Partitioning
  * [sediment-lfproject](https://sediment-lfproject.github.io): Security for IoT Devices
  
-## Influence on Standards
+### Influence on Standards
 
 While working on the DARPA XG Program, I wrote the original text for the spectrum policy language portions of this [report](https://apps.dtic.mil/sti/pdfs/ADA437096.pdf), which has a clear, albeit uncredited, influence on the IEEE P1900.5.1 standard. In my retrospective opinion, a better design would accord a constraints DSL more prominence within the language, while including modal and description logics more judiciously. I briefly followed the IEEE P1900.5 WG in 2024, but lost interest..
 
