--- a/_posts/2024-05-20-welcome.md
+++ b/_posts/2024-05-20-welcome.md
@@ -10,7 +10,7 @@ tags: [about]
 
 My name is Rajesh Krishnan. I am a naturalized US citizen of Bharatiya (Indian) origin, and I currently live in Fort Valley, Virginia, USA. 
 
-I am a retired computer scientist by preofession, and I am a senior member of the Association of Computing Machinery.
+I am a retired computer scientist by profession, and I am a senior member of the Association of Computing Machinery.
 
 My current interests include computation, minimalism, veganism, and sanatana dharma (especially yoga and vedanta).
 
