--- a/_posts/2024-05-20-welcome.md
+++ b/_posts/2024-05-20-welcome.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Welcome to my blog"
 author: "Rajesh Krishnan"
-categories: [about]
+categories: [About]
 tags: [about]
 ---
 
