--- a/_posts/2024-05-20-welcome.md
+++ b/_posts/2024-05-20-welcome.md
@@ -10,34 +10,14 @@ tags: [about]
 
 My name is Rajesh Krishnan. I am a naturalized US citizen of Bharatiya (Indian) origin, and I currently live in Fort Valley, Virginia, USA. 
 
-I am a retired computer scientist by profession, and I am a senior member of the Association for Computing Machinery.
+I am a retired computer scientist by profession, and I am a senior member of the Association for Computing Machinery.  You can find a list of my patents, publications, and technical reports on [Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate). You can find my open-source software contributions on [GitHub] (https://github.com/rajesh-krishnan).
 
-My current interests include computation, minimalism, veganism, and sanatana dharma (especially yoga and vedanta).
+My other interests include minimalism, veganism, and sanatana dharma (especially yoga and vedanta).
 
-## Earlier Works
-
-### Publications and Patents
-
-For a list of my patents, publications, and reports, see:
-[Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate)
-
-### Open-source Software
-
-Own projects:
-
- * [hamsa](https://rajesh-krishnan.github.io/deed): Hash Aided Machine-Intelligence Sans Accelerators
- * [deed](https://rajesh-krishnan.github.io/deed): Decision Evaluation in Encrypted Domain 
- * [syncsmart](https://rajesh-krishnan.github.io/syncsmart): Data Set Reconciliation 
- * [cambda](https://rajesh-krishnan.github.io/cambda): An Implementation of the Kanerva Memory 
- * [pys](https://rajesh-krishnan.github.io/pys): Patanjala Yogasutrani
-
-Contributions to other projects:
-
- * [gaps-closure](https://gaps-closure.github.io): Annotation-Driven Program Analysis and Partitioning
- * [sediment-lfproject](https://sediment-lfproject.github.io): Security for IoT Devices
- 
-### Influence on Standards
+<!--
+## Influence on Standards
 
 While working on the DARPA XG Program, I wrote the original text for the spectrum policy language portions of this [report](https://apps.dtic.mil/sti/pdfs/ADA437096.pdf), which has a clear, albeit uncredited, influence on the IEEE P1900.5.1 standard. In my retrospective opinion, a better design would accord a constraints DSL more prominence within the language, while including modal and description logics more judiciously. I briefly followed the IEEE P1900.5 WG in 2024, but lost interest..
 
 While working on the DARPA DTN program, I had [participated](https://mailarchive.ietf.org/arch/msg/dtn-interest/KQFRTBWkMga5pRTXuP3tbDzu-n8/) in the IRTF DTNRG.
+-->
